# share-terminal

./: API_INTEGRATION.md  Cargo.toml  index.html  styles.css
public/css/: access.css  canvas.css  login.css  pixel_art.css  signup.css
src/: app.rs  constants.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: constants.rs  lib.rs
src-tauri/src/api/: access.rs  auth.rs  mod.rs  signaling.rs
src/components/: access_layout.rs  canvas_topbar.rs  mod.rs  sidebar.rs  topbar.rs
src/components/pixel_art/: mod.rs  pixel_art.rs
src/pages/: canvas.rs  mod.rs
src/pages/home/: mod.rs
src/pages/home/access/: access.rs  connected_users.rs  incoming_requests.rs  mod.rs  outgoing_requests.rs  request_access.rs  screen_share_requests.rs  viewers.rs
src/pages/home/login/: login.rs
src/pages/home/signup/: signup.rs
src/router/: router.rs
src/services/: api.rs  mod.rs
src/utils/: auth.rs
